# vehicle_builder

./: .flake8  Makefile  README.md  alembic.ini  init_db.py  main.py  pyproject.toml
vehicle_builder/: db.py  exceptions.py  models.py  routes.py  schemas.py  settings.py  views.py
vehicle_builder/alembic/: env.py
vehicle_builder/alembic/versions/: 910802ea9ded_init.py
vehicle_builder/repositories/: base_repository.py  groups_repository.py
vehicle_builder/services/: __init__.py  groups_service.py  library_service.py
