[tool.poetry]
name = "vehicle-builder"
version = "0.1.0"
description = ""
authors = ["Max Kashintcev <m.kashintcev@gmail.com>"]
readme = "README.md"
packages = [{include = "vehicle_builder"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
environs = "^9.5.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
aiopg = "^1.3.3"
alembic = "^1.7.6"
SQLAlchemy-Utils = "^0.38.2"
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
